--- a/src/stylesheets/helpers/hacks/_hacks.scss
+++ b/src/stylesheets/helpers/hacks/_hacks.scss
@@ -2,6 +2,8 @@
 /// @group hacks
 ////
 
+// sass-lint:disable-all
+
 @mixin important($property, $style) {
   #{ $property }: #{ $style } !important;
 }
