--- a/src/stylesheets/helpers/_helpers.scss
+++ b/src/stylesheets/helpers/_helpers.scss
@@ -7,7 +7,9 @@
 'helpers-glyphs',
 'helpers-bem',
 'helpers-print',
-'helpers-visibility';
+'helpers-visibility',
+'helpers-clearfix',
+'helpers-text';
 
 /// Return ems from a pixel value
 /// This assumes a base of `$base-font-size`
