--- a/src/stylesheets/helpers/_helpers-lists.scss
+++ b/src/stylesheets/helpers/_helpers-lists.scss
@@ -2,16 +2,18 @@
 /// @group helpers
 ////
 
-// See http://hugogiraudel.com/2013/08/08/advanced-sass-list-functions/#selecting-values-from-list
+/// Shortcut for getting the first item from a list
+/// @link http://hugogiraudel.com/2013/08/08/advanced-sass-list-functions/#selecting-values-from-list
 @function first($list) {
   @return nth($list, 1);
 }
 
+/// Shortcut for getting the last item from a list
+/// @link http://hugogiraudel.com/2013/08/08/advanced-sass-list-functions/#selecting-values-from-list
 @function last($list) {
   @return nth($list, length($list));
 }
 
-///
 /// Returns last index of `$value` in `$list`.
 ///
 /// @ignore Documentation: http://at-import.github.io/SassyLists/documentation/#function-sl-last-index
