--- a/src/stylesheets/helpers/_helpers-text.scss
+++ b/src/stylesheets/helpers/_helpers-text.scss
@@ -101,8 +101,25 @@
   float: left;
 }
 
-// Quick right float
+/// Quick right float
 /// @since 0.1.0
 .right {
   float: right;
+}
+
+
+/// Set and element to display as block and align
+/// centrally via auto left/right margins
+/// @since 0.1.0
+@mixin center-block {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/// Set and element to display as block and align
+/// centrally via auto left/right margins
+/// @since 0.1.0
+.center-block {
+  @include center-block;
 }
