--- a/src/stylesheets/helpers/_helpers-print.scss
+++ b/src/stylesheets/helpers/_helpers-print.scss
@@ -34,6 +34,7 @@
   @media print {
     // sass-lint:disable no-qualifying-elements
     // sass-lint:disable no-universal-selectors
+    // sass-lint:disable no-combinators
 
     * {
       @include important(text-shadow, none);
