Update colours to corporate palette

--- a/src/stylesheets/components/_components-breadcrumbs.scss
+++ b/src/stylesheets/components/_components-breadcrumbs.scss
@@ -14,7 +14,7 @@
 
     &:before {
       @include nice-icon(angle-right);
-      color: get-colour(grey);
+      color: $colour-grey-1;
       margin: scut-em(0 10);
     }
 
