--- a/src/stylesheets/components/_components-buttons.scss
+++ b/src/stylesheets/components/_components-buttons.scss
@@ -6,10 +6,10 @@
   @include remove-mz-focus-inner;
   @include font-size(0, 2.5);
   appearance: none;
-  background: get-colour(blue);
+  background: $colour-dark-grey;
   border: 0;
   border-radius: 0;
-  color: $white;
+  color: $colour-nice-white;
   cursor: pointer;
   display: inline-block;
   margin: 0 em(4) 0 0;
@@ -21,8 +21,8 @@
   &:hover,
   &:focus,
   &:active {
-    background: get-colour(grey);
-    color: $white;
+    background: $colour-rich-black;
+    color: $colour-nice-white;
     text-decoration: none;
   }
 
@@ -31,7 +31,7 @@
   }
 
   &:visited {
-    color: #fff;
+    color: $colour-nice-white;
   }
 
   // Disabled button styles
@@ -48,91 +48,53 @@
   // External links have an icon
   &[rel='external'] {
     &::after {
-      color: $white;
+      color: $colour-nice-white;
     }
 
     &:hover {
       &::after {
-        color: $white;
+        color: $colour-nice-white;
       }
     }
   }
 
-  &--xxs {
-    @include font-size(-3, 1.5);
-    padding: 0 em(10);
-  }
-
-  &--xs {
-    @include font-size(-2, 1.5);
-    padding: 0 em(12);
-  }
-
-  &--sm {
-    @include font-size(-1);
-    padding: 0 em(12);
-  }
-
-  &--lg {
-    @include font-size(1, 3);
-    padding: 0 em(16);
-  }
-
-  &--xl {
+  &--prominent {
     @include font-size(2, 4);
     padding: 0 em(20);
-  }
-
-  &--xxl {
-    @include font-size(3, 4);
-    padding: 0 em(24);
-  }
-
-  &--primary {
-    background: get-colour(green, x-dark);
-    border: 1px solid $white;
-    color: $white;
+    background: $colour-purple;
+    border: 1px solid $colour-nice-white;
+    color: $colour-nice-white;
 
     &:hover {
       text-decoration: underline;
     }
-
-    &:hover,
-    &:focus {
-      background: get-colour(green, xx-dark);
-    }
   }
 
   &--secondary {
-    background: get-colour(grey, x-light);
-    color: get-colour(grey, dark);
+    background: #666;
+    color: $colour-nice-white;
 
     &[rel='external'] {
-      &::after {
-        color: get-colour(grey, dark);
+      &:after {
+        color: $colour-nice-white;
       }
 
       &:hover {
-        &::after {
-          color: get-colour(grey, dark);
+        &:after {
+          color: $colour-nice-white;
         }
       }
     }
 
     &:hover,
     &:focus {
-      background: get-colour(grey, light);
-      color: get-colour(grey, dark);
+      background: #333;
+      color: $colour-nice-white;
       text-decoration: underline;
     }
 
-    &:active {
-      background: get-colour(grey, light);
-      color: get-colour(grey, dark);
-    }
-
     &:visited {
-      color: get-colour(grey, dark);
+      color: $colour-nice-white;
     }
   }
 }
