--- a/src/stylesheets/components/_components-tables.scss
+++ b/src/stylesheets/components/_components-tables.scss
@@ -18,7 +18,7 @@ table {
   td {
     //@include core-19;
     border-bottom: 1px solid $colour-border;
-    color: $black;
+    color: $colour-text;
     padding: em(12, 19) em(20, 19) em(9, 19) 0;
     text-align: left;
   }
