Remove dependency on scut and add since parameter to most sass constructs

--- a/src/stylesheets/components/_components-global.scss
+++ b/src/stylesheets/components/_components-global.scss
@@ -3,6 +3,7 @@
 ////
 
 /// Container
+/// @since 0.1.0
 %container {
   margin: auto;
   max-width: 1170px;
@@ -20,6 +21,7 @@
 ///     <div class="grid">
 ///     </div>
 ///   </div>
+/// @since 0.1.0
 .container {
   @extend %container;
 
