--- a/src/stylesheets/components/_components-maintain-ratio.scss
+++ b/src/stylesheets/components/_components-maintain-ratio.scss
@@ -32,7 +32,7 @@
 ///       <div style="display: inline-block; height: 100%; vertical-align: middle;"></div>
 ///     </div>
 ///   </div>
-///
+/// @since 0.1.0
 .maintain-ratio {
   display: block;
   height: 0;
