--- a/src/stylesheets/components/_components-panel.scss
+++ b/src/stylesheets/components/_components-panel.scss
@@ -4,6 +4,7 @@
 
 /// A panel is a container for visually separating content.
 /// Often used within a sidebar.
+/// @since 0.1.0
 .panel {
   background: $colour-panel;
   padding: 1em;
