--- a/src/stylesheets/experience.scss
+++ b/src/stylesheets/experience.scss
@@ -4,8 +4,7 @@
 @import 'vendor/normalize';
 
 // Vendor
-@import 'vendor/scut',
-'vendor/math',
+@import 'vendor/math',
 'vendor/is',
 'vendor/mq';
 
