--- a/src/stylesheets/typography/_typography-headings.scss
+++ b/src/stylesheets/typography/_typography-headings.scss
@@ -24,6 +24,7 @@ h6,
 
 /// Primary heading. Used for h1 tag but can be used directly
 /// for semantic classes for visual styling.
+/// @since 0.1.0
 @mixin h1 {
   @include font(h1, $line-height: 3, $below: 1);
   font-weight: 700;
@@ -31,6 +32,7 @@ h6,
 
 /// Secondary heading. Used for h2 tag but can be used directly
 /// for semantic classes for visual styling.
+/// @since 0.1.0
 @mixin h2 {
   @include font(h2, $line-height: 2.5, $below: 1);
   font-weight: 700;
@@ -38,6 +40,7 @@ h6,
 
 /// Tertiary heading. Used for h3 tag but can be used directly
 /// for semantic classes for visual styling.
+/// @since 0.1.0
 @mixin h3 {
   @include font(h3, $line-height: 2.25, $below: 1);
   font-weight: 700;
@@ -45,6 +48,7 @@ h6,
 
 /// Fourth level heading. Used for h4 tag but can be used directly
 /// for semantic classes for visual styling.
+/// @since 0.1.0
 @mixin h4 {
   @include font(h4, $line-height: 2, $below: 1);
   font-weight: 700;
@@ -52,6 +56,7 @@ h6,
 
 /// Fifth level heading. Used for h5 tag but can be used directly
 /// for semantic classes for visual styling.
+/// @since 0.1.0
 @mixin h5 {
   @include font(h5, $line-height: 1.8, $below: 0);
   font-weight: 700;
@@ -59,6 +64,7 @@ h6,
 
 /// Sixth level heading. Used for h6 tag but can be used directly
 /// for semantic classes for visual styling.
+/// @since 0.1.0
 @mixin h6 {
   @include font(h6, $line-height: 1.6, $below: 0);
   font-weight: 700;
