--- a/src/stylesheets/components/_components-buttons.scss
+++ b/src/stylesheets/components/_components-buttons.scss
@@ -2,6 +2,8 @@
 /// @group components
 ////
 
+/// Button
+/// @since 0.1.0
 .btn {
   @include remove-mz-focus-inner;
   @include font-size(0, 2.5);
