--- a/src/stylesheets/components/_components-footer.scss
+++ b/src/stylesheets/components/_components-footer.scss
@@ -3,12 +3,13 @@
 ////
 
 /// Site footer
+/// @since 0.1.0
 .site-footer {
   @include font-size(-1);
   background: $colour-dark-grey;
   color: $colour-nice-white;
-  margin-top: scut-em(32px);
-  padding: scut-em(32px 0);
+  margin-top: em(32px);
+  padding: em(32px 0);
 
   @media print {
     display: none;
@@ -28,7 +29,7 @@
 
   &__logo {
     display: block;
-    margin: scut-em(0 0 32 0);
+    margin: em(0 0 32 0);
     text-decoration: none;
 
     .icon {
@@ -37,17 +38,17 @@
   }
 
   &__services {
-    margin: scut-em(0 0 32 0);
+    margin: em(0 0 32 0);
   }
 
   &__social {
     clear: both;
-    margin: scut-em(0 0 32 0);
+    margin: em(0 0 32 0);
   }
 
   &__nav {
     clear: both;
-    margin: scut-em(0 0 32 0);
+    margin: em(0 0 32 0);
   }
 
   &__copyright {
@@ -58,12 +59,12 @@
   @include mq($from: sm) {
     &__logo {
       float: left;
-      margin: scut-em(0 32 32 0);
+      margin: em(0 32 32 0);
     }
 
     &__services {
       float: left;
-      margin: scut-em(0 0 32 0);
+      margin: em(0 0 32 0);
     }
 
     &__social {
@@ -106,7 +107,7 @@
       @include font-size(-1, 1.3);
       color: $colour-grey-3;
       display: block;
-      padding: scut-em(8 0);
+      padding: em(8 0);
       text-decoration: none;
 
       &:hover {
@@ -121,7 +122,7 @@
     .icon {
       @include font-size(1);
       display: inline-block;
-      margin: scut-em(0 4 0 0);
+      margin: em(0 4 0 0);
       vertical-align: middle;
     }
   }
@@ -132,21 +133,21 @@
       border: 0;
       float: left;
       text-align: center;
-      width: scut-em(90px);
+      width: em(90px);
 
       &:first-child {
         border: 0;
       }
 
       a {
-        padding: scut-em(4px) 0 0;
+        padding: em(4px) 0 0;
       }
     }
 
     .icon {
       @include font-size(6);
       display: block;
-      margin: 0 auto scut-em(4px);
+      margin: 0 auto em(4px);
 
       // The following is needed for IE8 to go centrally aligned
       &:before {
@@ -164,7 +165,7 @@
     @include font-size(-1);
     display: inline-block;
     font-weight: normal;
-    margin: scut-em(0 8 0 0);
+    margin: em(0 8 0 0);
     padding: 0;
     vertical-align: top;
   }
@@ -186,7 +187,7 @@
 
   a {
     display: block;
-    padding: scut-em(0 4);
+    padding: em(0 4);
     text-decoration: none;
 
     &:focus,
@@ -205,7 +206,7 @@
   }
 
   a {
-    padding: scut-em(4 0);
+    padding: em(4 0);
     text-decoration: none;
   }
 
@@ -229,7 +230,7 @@
     }
 
     a {
-      padding: scut-em(0 8);
+      padding: em(0 8);
     }
   }
 }
