--- a/src/stylesheets/components/_components-skiplinks.scss
+++ b/src/stylesheets/components/_components-skiplinks.scss
@@ -5,7 +5,7 @@
 .skip-links {
   &__link {
     left: -9999em;
-    margin: scut-em(0 0 0 16px);
+    margin: em(0 0 0 16px);
     position: absolute;
 
     &:focus {
