--- a/src/stylesheets/helpers/hacks/_hacks.scss
+++ b/src/stylesheets/helpers/hacks/_hacks.scss
@@ -4,12 +4,14 @@
 
 // sass-lint:disable-all
 
+/// @since 0.1.0
 @mixin important($property, $style) {
   #{ $property }: #{ $style } !important;
 }
 
 /// Resets `box-sizing` to `border-box`
 /// @link https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
+/// @since 0.1.0
 @mixin default-box-sixing {
   html {
     box-sizing: border-box;
@@ -20,6 +22,7 @@
 }
 
 /// Cross browser border box
+/// @since 0.1.0
 @mixin border-box {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
@@ -28,6 +31,7 @@
 
 /// Fix unwanted button padding in Firefox
 /// @link http://stackoverflow.com/a/5518143/486434 Stack Overflow answer
+/// @since 0.1.0
 @mixin remove-mz-focus-inner {
   &::-moz-focus-inner {
     border: 0;
