--- a/src/stylesheets/settings/_settings-colours.scss
+++ b/src/stylesheets/settings/_settings-colours.scss
@@ -3,21 +3,26 @@
 ////
 
 /// True black, used for print styles
+/// @since 0.2.0
 $colour-true-black: #000;
 
 /// True white, used for print styles
+/// @since 0.2.0
 $colour-true-white: #fff;
 
 // PRIMARY PALETTE
 
 /// NICE Black. Part of the primary palette.
+/// @since 0.2.0
 $colour-nice-black: #222;
 
 /// NICE White. Part of the primary palette
+/// @since 0.2.0
 $colour-nice-white: #fff;
 
 /// NICE Teal. Part of the primary palette.
 /// First choice of colour for supporting
+/// @since 0.2.0
 $colour-nice-teal: #004650;
 
 // SECONDARY PALETTE
@@ -25,80 +30,125 @@ $colour-nice-teal: #004650;
 /// Purple. Part of the secondary palette. Purple should be used sparingly and only used as a
 /// panel background to highlight a particular section of content,
 /// in which case font colour must be pure white (NICE White) to make text legible.
+/// @since 0.2.0
 $colour-purple: #451551;
 
 /// Cool Teal. Part of the secondary palette.
+/// @since 0.2.0
 $colour-cool-teal: #00506a;
 
 /// Rich Black. Part of the secondary palette.
+/// @since 0.2.0
 $colour-rich-black: #0e0e0e;
 
 /// Dark Grey. Part of the secondary palette.
+/// @since 0.2.0
 $colour-dark-grey: #393939;
 
 /// Grey 1. Part of the secondary palette.
+/// @since 0.2.0
 $colour-grey-1: #adadad;
 
 /// Grey 2. Part of the secondary palette.
+/// @since 0.2.0
 $colour-grey-2: #d6d6d6;
 
 /// Grey 3. Part of the secondary palette.
+/// @since 0.2.0
 $colour-grey-3: #e9e9e9;
 
 // TERTIARY PALETTE
 
 /// Blue 1. Part of the tertiary palette.
+/// @since 0.2.0
 $colour-blue-1: #233746;
 
 /// Blue 2. Part of the tertiary palette.
+/// @since 0.2.0
 $colour-blue-2: #314c60;
 
 /// Blue 3. Part of the tertiary palette.
+/// @since 0.2.0
 $colour-blue-3: #517489;
 
 /// Ice Teal. Part of the tertiary palette.
+/// @since 0.2.0
 $colour-ice-teal: #a2bdc1;
 
 /// Teal 1. Part of the tertiary palette.
+/// @since 0.2.0
 $colour-teal-1: #4f7d83;
 
 /// Teal 2. Part of the tertiary palette.
+/// @since 0.2.0
 $colour-teal-2: #18646e;
 
 /// Teal 3. Part of the tertiary palette.
+/// @since 0.2.0
 $colour-teal-3: #15434a;
 
 // SEMANTIC COLOUR NAMES
 
 /// Page background colour
+/// @since 0.2.0
 $colour-page: $colour-nice-white;
+
 /// Link text colour
+/// @since 0.2.0
 $colour-link: #005ea5;
+
 /// Link hover colour
+/// @since 0.2.0
 $colour-link-hover: #2b8cc4;
+
 /// Link visited colour
+/// @since 0.2.0
 $colour-link-visited: #4c2c92;
+
 /// Link active colour
+/// @since 0.2.0
 $colour-link-active: #2b8cc4;
+
 /// Focus colour
+/// @since 0.2.0
 $colour-focus: #ffbf47;
+
 /// Standard text colour
+/// @since 0.2.0
 $colour-text: $colour-rich-black;
+
 /// Borders, seperators, rules, keylines etc.
+/// @since 0.2.0
 $colour-border: $colour-grey-1;
+
 // Panels, tabs etc
+/// @since 0.2.0
 $colour-panel: $colour-grey-3;
+
 // Dark panels
+/// @since 0.2.0
 $colour-panel-dark: $colour-dark-grey;
+
 /// Discovery agile lifecycle phase
+/// @since 0.2.0
 $colour-discovery: #b8008e;
+
 /// Alpha badges and banners
+/// @since 0.2.0
 $colour-alpha: #d53880;
+
 /// Beta badges and banners
+/// @since 0.2.0
 $colour-beta: #f47738;
+
 /// Live badges and banners
+/// @since 0.2.0
 $colour-live: #70a747;
+
 /// Error text and border colour
+/// @since 0.2.0
 $colour-error: #df3034;
+
 /// Error background colour
+/// @since 0.2.0
 $colour-error-background: #fef7f7;
