--- a/src/stylesheets/settings/_settings-modular-scale.scss
+++ b/src/stylesheets/settings/_settings-modular-scale.scss
@@ -16,6 +16,7 @@
 /// @prop {Number} minor-third [1.2]
 /// @prop {Number} major-second[1.125]
 /// @prop {Number} minor-second[1.066666667]
+/// @since 0.1.0
 $scales: (
   golden: 1.618034,
   double-octave: 4 / 1,
@@ -40,6 +41,7 @@ $scales: (
 /// inside the $scales map to find a ratio.
 /// @param $scale The name of the scale
 /// @returns {Number} The numeric scale ratio for the given name
+/// @since 0.1.0
 @function get-ratio($scale) {
   @if map-has-key($scales, $scale) {
     @return map-get($scales, $scale);
