--- a/src/stylesheets/helpers/_helpers-glyphs.scss
+++ b/src/stylesheets/helpers/_helpers-glyphs.scss
@@ -62,14 +62,16 @@ $glyphs: (
   @return unquote('\'#{$codes}\'');
 }
 
-/// Output a BEM style glyph selector for each glyph in the map.
-/// E.g. .glyph.glyph--bullet { content: '\2022'; }
-/// @since 0.1.0
-.glyph {
-  @each $key, $value in $glyphs {
-    &--#{$key} {
-      &::before {
-        content: unquote('\'\\#{$value}\'');
+@if $output-glyph-classes {
+  /// Output a BEM style glyph selector for each glyph in the map.
+  /// E.g. .glyph.glyph--bullet { content: '\2022'; }
+  /// @since 0.1.0
+  .glyph {
+    @each $key, $value in $glyphs {
+      &--#{$key} {
+        &::before {
+          content: unquote('\'\\#{$value}\'');
+        }
       }
     }
   }
